--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@ __pycache__/
 .ipynb_checkpoints/
 src/__pycache__/
 dataset/
-models/
+models/VPRTempo313662725001.pth
+models/VPRTempoQuant313662725001.pth
