Networks now run through main.py, user can set quantized or train_new_model to do either from terminal

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,19 @@
 __pycache__/
 .ipynb_checkpoints/
 src/__pycache__/
-dataset/
+dataset/conv/
+dataset/Dusk/
+dataset/fall/
+dataset/model/
+dataset/output_database/
+dataset/output_query/
+dataset/Rain/
+dataset/spring/
+dataset/summer/
+dataset/Sun/
+dataset/winter/
+dataset/event.csv/
+models/VPRTempo78415685001.pth
+models/VPRTempoQuant78415685001.pth
 models/VPRTempo313662725001.pth
 models/VPRTempoQuant313662725001.pth
