--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ vprtempo/dataset/winter/
 vprtempo/dataset/event.csv
 vprtempo/output/
 vprtempo/src/__pycache__/
+vprtempo/models/VPRTempo3136627250045.pth
