Update for v1.1.6, running individual .csv files, updated ORC information and .csv files, tested and evaluated

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ vprtempo/src/__pycache__/
 vprtempo/models/springfall_VPRTempo_IN3136_FN6272_DB500.pth
 vprtempo/models/springfall_VPRTempoQuant_IN3136_FN6272_DB500.pth
 tutorials/mats/1_BasicDemo/
+.vscode/
