--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ vprtempo/dataset/winter/
 vprtempo/dataset/event.csv
 vprtempo/output/
 vprtempo/src/__pycache__/
-vprtempo/models/springfall_VPRTempo_IN3136_FN6272_DB500.pth
-vprtempo/models/springfall_VPRTempoQuant_IN3136_FN6272_DB500.pth
+*.pth
 tutorials/mats/1_BasicDemo/
 .vscode/
+*.DS_Store
